2010-05-28  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (getstack, gettime): fix declarations

2010-05-27  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-mantissa): do not call PARI-LENGTH-RAW,
	use PARI-LENGTH-BYTE to avoid allocating an extra FOREIGN-VARIABLE
	(PARIINFO): define
	(pari-version): also return PARIINFO
	(legendre-polynomial, tchebychev-polynomial, hilbert-matrix)
	(pascal-triangle, binomial-coefficient, set-random-seed)
	(get-random-seed, pari-random): fix definitions
	(pari-effective-length-raw, pari-mantissa-eff):
	restore using PARI-LENGTH-BYTE
	(convert-from-pari-1, convert-from-pari-10): use PARI-MANTISSA-EFF

2010-05-26  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: update all names to v2 using <pariold.h>
	(pari-pi): remove DEFINE-SYMBOL-MACRO to avoid shadowing a foreign var
	(pari-sign-raw): fix for 64-bit negatives
	(convert-to-pari): NIL->NIL
	(VERYBIGINT, BIGINT): add
	(get-varno): use BIGINT instead of 256 to check validity
	(extract-mantissa): extract from CONVERT-TO-PARI (INTEGER & FLOAT)
	(convert-to-pari@integer&float): use it; use (BITSIZEOF 'ULONG)
	instead of a literal 32 which fixes bignum & (almost) float conversion

2010-05-26  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* modules/syscalls/calls.c [WIN32_NATIVE || UNIX_CYGWIN32]
	(OS::%SET-CLIPBOARD): behave according to setf logic: return
	the value given. Raise a lisp error on failure.
	Do not try to use unicode when it is not a unicode build.
	(OS:CLIPBOARD): The same unicode guarding ifdefs.
	Expect blocking behaviour of GetClipboardData.

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-get-real-prec-raw)
	(pari-real-precision, pari-get-real-prec-digits): remove
	(pari-call-out-prec): use (EXT:LONG-FLOAT-DIGITS)
	instead of (PARI-GET-REAL-PREC-RAW) as the default PREC value

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-byte): add