@@ -1,6 +1,9 @@
 2010-05-28  Sam Steingold  <sds@gnu.org>
 
 	* modules/pari/pari.lisp (getstack, gettime): fix declarations
+	(make-internal-pari-object): return NIL when PTR is NULL
+	(pari-reader): use MAKE-INTERNAL-PARI-OBJECT
+	(pari-to-lisp@null): return NIL
 
 2010-05-27  Sam Steingold  <sds@gnu.org>
 
